K8/v2/negotiator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: negotiator
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    service: negotiator
